[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.15",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "bs4==0.0.2",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "common==0.1.2",
    "controller==0.1.0",
    "defusedxml==0.7.1",
    "dic==1.5.2b1",
    "distro==1.9.0",
    "domain==0.1.4",
    "dotenv==0.9.9",
    "fastapi==0.115.12",
    "frozenlist==1.5.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.69.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.9.0",
    "openai==1.70.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pip==25.0",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "python-engineio==4.12.0",
    "python-socketio==5.13.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rsa==4.9",
    "selenium==4.31.0",
    "setuptools==75.8.0",
    "simple-websocket==1.1.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "starlette==0.46.1",
    "tqdm==4.67.1",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "wsproto==1.2.0",
    "yarl==1.18.3",
    "youtube-transcript-api==1.0.3",
]
